@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 	Updates to the automatically-generated files
+	Fix the handling of multi-line replies in exceptional circumstances
+	Renamed public methods to private methods (should have been private in the first place!)
 
 0.003	2011-05-04 21:39:47 UTC
 
